提交数据库版本导致的驱动异常修改

--- a/src/test/resources/uid/mysql.properties
+++ b/src/test/resources/uid/mysql.properties
@@ -1,8 +1,8 @@
 #datasource db info
-mysql.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:xxxx/xxxx
-jdbc.username=xxxx
-jdbc.password=xxxx
+mysql.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://192.168.234.130:3306/db_snowflake?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true
+jdbc.username=root
+jdbc.password=Raydata123
 jdbc.maxActive=2
 
 #datasource base
